TD-Jour6/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudshop-ingress
  namespace: cloudshop-prod
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - host: cloudshop.stevehoareau.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: cloudshop-api-gateway.stevehoareau.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
  - host: cloudshop-auth-service.stevehoareau.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8081
  - host: cloudshop-products-api.stevehoareau.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: products-service
            port:
              number: 8082
  - host: cloudshop-orders-api.stevehoareau.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orders-service
            port:
              number: 8083
